BCU-163: Fixed issue with menus on small screens
Fixes #163

--- a/style/menu.css
+++ b/style/menu.css
@@ -181,7 +181,8 @@
         float: none;
     }
 }
-
-.navbar .nav>li {
-    height: 40px;
+@media (min-width: 990px) {
+    .navbar .nav>li {
+        height: 40px;
+    }
 }
